@@ -26,3 +26,4 @@ export MOD_EXTERNAL_YEAR_MAX='2099'
 export MOD_SHUTDOWN_FIRST='inetd'
 export MOD_SHUTDOWN_IGNORE='syslogd'
 export MOD_SHUTDOWN_LAST='cifsmount davfs2 autofs'
+export MOD_GET_IP_METHOD='--all'
