@@ -1,5 +1,7 @@
 #!/bin/sh
 
+[ -r /mod/etc/conf/mod.cfg ] && . /mod/etc/conf/mod.cfg
+
 local ip=""
 local retval=""
 
@@ -7,11 +9,13 @@ helpmsg() {
 echo "get_ip - determine external IP address"
 	echo
 	echo "Usage: $0 [option]"
-	echo "    -a, --all      - use all methods (order: webcm, extquery, dsld) [default]"
+	echo "    -a, --all      - use all methods (order: webcm, extquery, dsld) [recommended]"
 	echo "    -d, --dsld     - use showdsldstat method (use only with kernel 2.6 firmwares)"
-	echo "    -e, --extquery - use external site query method"
+	echo "    -e, --extquery - use external site query method (checkip.dyndns.org)"
 	echo "    -w, --webcm    - use webcm CGI handler / ctlmgr_ctl method"
 	echo "    -?, --help     - print this help message"
+	echo
+	echo "  current default method: $MOD_GET_IP_METHOD"
 	echo
 }
 
@@ -68,8 +72,14 @@ via_webcm() {
 	check_local_ip
 }
 
+#use user-define method if no argument is given
+if [ $# -eq 0 ]; then
+	get_method="$MOD_GET_IP_METHOD"
+else
+	get_method="$1"
+fi
 
-case $1 in
+case $get_method in
 	-a|--all|"")
 		for mode in webcm extquery dsld; do
 			via_$mode
