@@ -1,6 +1,5 @@
 export OPENDD_ENABLED='no'
 export OPENDD_FORCE_UPDATE='no'
-export OPENDD_GET_IP_OPTION='--extquery'
 
 export OPENDD_SERVER='members.dyndns.org'
 export OPENDD_HOST=''
