@@ -36,7 +36,7 @@ run() {
 	modlib_config
 	chmod 600 /mod/etc/$DAEMON.conf
 
-	NEW_IP=$(get_ip $OPENDD_GET_IP_OPTION 2>/dev/null)
+	NEW_IP=$(get_ip 2>/dev/null)
 	if [ -z "$NEW_IP" ]; then
 		echo 'failed.'
 		exit 1
