@@ -30,7 +30,6 @@ cat << EOF
 <input type="hidden" name="force_update" value="no">
 <input id="u1" type="checkbox" name="force_update" value="yes"$force_update_chk><label for="u1">$(lang de:"Sp&auml;testens nach 25 Tagen updaten (hierf&uuml;r sollte crond aktiviert sein)." en:"Force update after 25 days (you should also enable crond).")</label>
 </p>
-<p>$(lang de:"Parameter f&uuml;r 'get_ip'" en:"Parameter of 'get_ip'"): <input type="text" name="get_ip_option" size="15" maxlength="250" value="$(html "$OPENDD_GET_IP_OPTION")"></p>
 EOF
 sec_end
 
