@@ -14,6 +14,7 @@ Latest changes:
 - New packages, libs, modules:
 
 - Updated tools and hooks:
+	* get_ip: default method could be set via webif
 
 - Updated patches:
 
